# kcli

./: .gitignore  .pre-commit-config.yaml  CLI.md  IMPLEMENTATION.md  README.md  pyproject.toml  test.md
kcli/: __init__.py  cli.py  crawler.py  embeddings.py  log.py  main.py  storage.py
tests/: conftest.py  test_main.py
~/.kcli/: kcli.sqlite
