[tool.poetry]
name = "kcli"
version = "0.1.0"
description = "A local knowledge base CLI with privacy-first approach"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "kcli"}]

[tool.poetry.dependencies]
python = "^3.12"
crawl4ai = "==0.4.247"
click = "==8.1.3"
markdownify = "==0.11.6"
requests = "==2.31.0"
beautifulsoup4 = "==4.12.2"
rich = "==13.4.2"
python-dotenv = "==1.0.1"
numpy = "==2.2.1"
litellm = "==1.55.12"
annoy = "==1.17.3"
hnswlib = "==0.8.0"
pydantic = "==2.10.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.5.0"
ruff = "^0.0.284"
black = "^23.7.0"

[tool.poetry.scripts]
kcli = "kcli.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib.resources.*:",
    "ignore::DeprecationWarning:fake_http_header.*:",
]

[tool.ruff]
select = ["E", "F", "I", "N"]
ignore = []
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
